--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/tailwind/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ui/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vue + Laravel</title>
-    <script type="module" crossorigin src="/tailwind/assets/index.c769e7a0.js"></script>
-    <link rel="stylesheet" href="/tailwind/assets/index.0b6518e6.css">
+    <script type="module" crossorigin src="/ui/assets/index.c769e7a0.js"></script>
+    <link rel="stylesheet" href="/ui/assets/index.0b6518e6.css">
   </head>
   <body>
     <div id="app"></div>
